// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`offsetDistance renders 0 1`] = `
Array [
  .c0 {
  offset-distance: 0;
}

<div
    className="c0"
  />,
  .c0 {
  offset-distance: 0;
}

<div
    className="c0"
  />,
  .c0 {
  offset-distance: 0;
}

<div
    className="c0"
  />,
  .c0 {
  offset-distance: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`offsetDistance renders function 1`] = `
Array [
  .c0 {
  offset-distance: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  offset-distance: has;
}

<div
    className="c0"
  />,
  .c0 {
  offset-distance: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  offset-distance: has;
}

<div
    className="c0"
  />,
]
`;

exports[`offsetDistance renders invalid theme path 1`] = `
Array [
  .c0 {
  offset-distance: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  offset-distance: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  offset-distance: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  offset-distance: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`offsetDistance renders negative number 1`] = `
Array [
  .c0 {
  offset-distance: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  offset-distance: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  offset-distance: -42365px;
}

<div
    className="c0"
  />,
  .c0 {
  offset-distance: -42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`offsetDistance renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  offset-distance: July;
}

@media screen and (min-width:November) {
  .c0 {
    offset-distance: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    offset-distance: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    offset-distance: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    offset-distance: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  offset-distance: July;
}

@media screen and (min-width:November) {
  .c0 {
    offset-distance: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    offset-distance: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    offset-distance: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    offset-distance: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  offset-distance: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    offset-distance: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    offset-distance: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    offset-distance: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    offset-distance: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  offset-distance: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    offset-distance: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    offset-distance: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    offset-distance: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    offset-distance: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`offsetDistance renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    offset-distance: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    offset-distance: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    offset-distance: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    offset-distance: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    offset-distance: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    offset-distance: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    offset-distance: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    offset-distance: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    offset-distance: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    offset-distance: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    offset-distance: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    offset-distance: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    offset-distance: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    offset-distance: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    offset-distance: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    offset-distance: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`offsetDistance renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  offset-distance: July;
}

@media May {
  .c0 {
    offset-distance: August;
  }
}

@media April {
  .c0 {
    offset-distance: September;
  }
}

@media January {
  .c0 {
    offset-distance: November;
  }
}

@media April {
  .c0 {
    offset-distance: August;
  }
}

@media June {
  .c0 {
    offset-distance: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  offset-distance: July;
}

@media May {
  .c0 {
    offset-distance: August;
  }
}

@media April {
  .c0 {
    offset-distance: September;
  }
}

@media January {
  .c0 {
    offset-distance: November;
  }
}

@media April {
  .c0 {
    offset-distance: August;
  }
}

@media June {
  .c0 {
    offset-distance: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  offset-distance: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    offset-distance: November;
  }
}

@media April {
  .c0 {
    offset-distance: January;
  }
}

@media January {
  .c0 {
    offset-distance: December;
  }
}

@media April {
  .c0 {
    offset-distance: April;
  }
}

@media June {
  .c0 {
    offset-distance: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  offset-distance: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    offset-distance: November;
  }
}

@media April {
  .c0 {
    offset-distance: January;
  }
}

@media January {
  .c0 {
    offset-distance: December;
  }
}

@media April {
  .c0 {
    offset-distance: April;
  }
}

@media June {
  .c0 {
    offset-distance: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`offsetDistance renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    offset-distance: July;
  }
}

@media April {
  .c0 {
    offset-distance: August;
  }
}

@media January {
  .c0 {
    offset-distance: September;
  }
}

@media April {
  .c0 {
    offset-distance: November;
  }
}

@media June {
  .c0 {
    offset-distance: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    offset-distance: July;
  }
}

@media April {
  .c0 {
    offset-distance: August;
  }
}

@media January {
  .c0 {
    offset-distance: September;
  }
}

@media April {
  .c0 {
    offset-distance: November;
  }
}

@media June {
  .c0 {
    offset-distance: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    offset-distance: January;
  }
}

@media April {
  .c0 {
    offset-distance: December;
  }
}

@media January {
  .c0 {
    offset-distance: April;
  }
}

@media April {
  .c0 {
    offset-distance: May;
  }
}

@media June {
  .c0 {
    offset-distance: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    offset-distance: January;
  }
}

@media April {
  .c0 {
    offset-distance: December;
  }
}

@media January {
  .c0 {
    offset-distance: April;
  }
}

@media April {
  .c0 {
    offset-distance: May;
  }
}

@media June {
  .c0 {
    offset-distance: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`offsetDistance renders postitive number 1`] = `
Array [
  .c0 {
  offset-distance: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  offset-distance: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  offset-distance: 42365px;
}

<div
    className="c0"
  />,
  .c0 {
  offset-distance: 42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`offsetDistance renders string 1`] = `
Array [
  .c0 {
  offset-distance: July;
}

<div
    className="c0"
  />,
  .c0 {
  offset-distance: July;
}

<div
    className="c0"
  />,
  .c0 {
  offset-distance: June;
}

<div
    className="c0"
  />,
  .c0 {
  offset-distance: June;
}

<div
    className="c0"
  />,
]
`;

exports[`offsetDistance renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`offsetDistance renders valid theme path 1`] = `
Array [
  .c0 {
  offset-distance: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  offset-distance: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  offset-distance: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  offset-distance: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
